--- a/blog_app/Gemfile
+++ b/blog_app/Gemfile
@@ -1,18 +1,18 @@
 source 'https://rubygems.org'
 
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
-gem 'rails', '4.0.0'
+gem 'rails', '~> 4'
 # gem 'sprockets-rails'
 
 # Use sqlite3 as the database for Active Record
 gem 'sqlite3', '~> 1.3', '>= 1.3.10'
 
 # Use SCSS for stylesheets
-gem 'sass-rails', '~> 4.0.0'
-gem 'bootstrap-sass', '3.3.7'
+gem 'sass-rails', '~> 4'
+gem 'bootstrap-sass', '~> 3'
 gem 'autoprefixer-rails'
 gem 'sprockets', '~> 2.8'
-gem 'sprockets-rails', :require => 'sprockets/railtie'
+gem 'sprockets-rails', '~> 2.1.4'
 
 # Use Uglifier as compressor for JavaScript assets
 gem 'uglifier', '>= 1.3.0'
